Setup spotless as pre-commit hook with apache 2.0 header

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 spotless {
     kotlin {
         target project.fileTree(dir: 'src', include: '**/*.kt')
-        ktlint("0.36.0")
+        licenseHeader '/* Licensed under Apache-2.0 */'
     }
 }
 
