--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,12 @@
 repos:
-  - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-    rev: v1.3.2
-    hooks:
-      - id: pretty-format-kotlin
-        args: [--autofix]
+- repo: https://github.com/jguttman94/pre-commit-gradle
+  rev: v0.2.1
+  hooks:
+  - id: gradle-task
+    name: Apply Spotless
+    args: [':app:spotlessApply', -w, -o]
+- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+  rev: v1.3.2
+  hooks:
+  - id: pretty-format-kotlin
+    args: [--autofix]
