--- a/.github/workflows/release-to-playstore.yml
+++ b/.github/workflows/release-to-playstore.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   gradle:
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Build with Gradle
