--- a/.github/workflows/release-to-playstore.yml
+++ b/.github/workflows/release-to-playstore.yml
@@ -10,11 +10,17 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build with Gradle
         run: ./gradlew bundleRelease
-      - name: Sign Android release
-        uses: r0adkll/sign-android-release@v1
+      - uses: r0adkll/sign-android-release@v1
         with:
           releaseDirectory: app/build/outputs/bundle/release
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
           alias: ${{ secrets.SIGNING_ALIAS }}
           keyStorePassword: ${{ secrets.SIGNING_STORE_PASSWORD }}
           keyPassword: ${{ secrets.SIGNING_KEY_PASSWORD }}
+      - uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+          packageName: net.redwarp.gifwallpaper
+          releaseFile: app/build/outputs/bundle/release/app-release.aab
+          track: internal
+          userFraction: 0.01
