Setup job to work on publish

--- a/.github/workflows/release-to-playstore.yml
+++ b/.github/workflows/release-to-playstore.yml
@@ -1,26 +1,30 @@
 name: Release to Play Store
 
 on:
-  push:
+  release:
+    types:
+      - published
 
 jobs:
   gradle:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Build with Gradle
+      - name: Checkout sources
+        uses: actions/checkout@v2
+      - name: Build release bundle
         run: ./gradlew bundleRelease
-      - uses: r0adkll/sign-android-release@v1
+      - name: Sign bundle
+        uses: r0adkll/sign-android-release@v1
         with:
           releaseDirectory: app/build/outputs/bundle/release
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
           alias: ${{ secrets.SIGNING_ALIAS }}
           keyStorePassword: ${{ secrets.SIGNING_STORE_PASSWORD }}
           keyPassword: ${{ secrets.SIGNING_KEY_PASSWORD }}
-      - uses: r0adkll/upload-google-play@v1
+      - name: Publish
+        uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: net.redwarp.gifwallpaper
           releaseFile: app/build/outputs/bundle/release/app-release.aab
           track: internal
-          userFraction: 0.01
