--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,16 +13,18 @@ android {
         applicationId "net.redwarp.gifwallpaper"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 13
-        versionName "0.6.0"
+        versionCode 14
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        resConfigs "en"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -42,7 +44,6 @@ android {
                 srcDirs 'src/main/resources', "$rootDir/docs/"
             }
         }
-        main.java.srcDirs += 'external'
     }
 }
 
@@ -60,7 +61,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
