--- a/.github/workflows/release-to-playstore.yml
+++ b/.github/workflows/release-to-playstore.yml
@@ -27,4 +27,4 @@ jobs:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: net.redwarp.gifwallpaper
           releaseFile: app/build/outputs/bundle/release/app-release.aab
-          track: internal
+          track: beta
