--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
-    id "com.diffplug.gradle.spotless" version "4.5.1"
-    id "com.github.ben-manes.versions" version "0.28.0"
+    id "com.diffplug.spotless" version "5.1.0"
+    id "com.github.ben-manes.versions" version "0.29.0"
 }
 
 android {
@@ -74,8 +74,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
     implementation 'androidx.lifecycle:lifecycle-service:2.2.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation "dev.sasikanth:colorsheet:1.0.1"
