Limit to pull requests

--- a/.github/workflows/verify-pull-requests.yml
+++ b/.github/workflows/verify-pull-requests.yml
@@ -1,8 +1,5 @@
-name: Verify
-on: 
-  push:
-    branches:
-      - '*'
+name: Verify pull requests
+on:
   pull_request:
     branches: 
       - '*'
