--- a/.github/workflows/verify-pull-requests.yml
+++ b/.github/workflows/verify-pull-requests.yml
@@ -1,10 +1,13 @@
 name: Verify pull requests
 on:
   pull_request:
-    branches: 
-      - '*'
+    types:
+      - opened
+      - edited
+      - synchronize
+
 jobs:
-  test:
+  tests:
     runs-on: [ubuntu-latest]
 
     steps:
@@ -15,3 +18,11 @@ jobs:
 
     - name: Stop Gradle
       run: ./gradlew --stop
+  
+
+  check_conventional_commit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: amannn/action-semantic-pull-request@v1.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
