--- a/.github/workflows/verify-pull-requests.yml
+++ b/.github/workflows/verify-pull-requests.yml
@@ -8,17 +8,14 @@ on:
 
 jobs:
   tests:
-    runs-on: [ubuntu-latest]
-
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v2
-    - name: Run all the tests
-      run: ./gradlew test
-
-    - name: Stop Gradle
-      run: ./gradlew --stop
-  
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Run all the tests
+        run: ./gradlew test
+      - name: Stop Gradle
+        run: ./gradlew --stop
 
   check_conventional_commit:
     runs-on: ubuntu-latest
