--- a/update_fastlane/Cargo.toml
+++ b/update_fastlane/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-serde = { verion = "1.0.117", features = ["derive"] }
+serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 anyhow = "1.0.34"
