chore: Automate fastlane when a file in the fastlane directory is changed (hopefully)

--- a/.github/workflows/update-playstore-metadata.yml
+++ b/.github/workflows/update-playstore-metadata.yml
@@ -1,6 +1,11 @@
 name: Update Playstore metadata
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - "master"
+    paths:
+      - "fastlane/**"
 
 jobs:
   update:
