chore: Update gradle to 6.8

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,10 @@
 rootProject.name='Gif Wallpaper'
+
+dependencyResolutionManagement {
+    repositories {
+        google()
+        jcenter()
+    }
+}
+
 include ':app'
