--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
     id "com.diffplug.spotless" version "5.9.0"
     id "com.github.ben-manes.versions" version "0.36.0"
 }
@@ -19,6 +18,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         resConfigs "en", "fr", "ru", "de"
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 
     buildTypes {
