fix: Prepare to ditch jcenter and update minor deps
Update decoder to new package name, and update other packages while I was at it.

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
-    ext.kotlin_version = '1.4.30'
+    ext.kotlin_version = '1.4.31'
     repositories {
         google()
+        mavenCentral()
         jcenter()
         maven {
             url "https://plugins.gradle.org/m2/"
