--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,10 @@ android {
             includeAndroidResources = true
         }
     }
+
+    packagingOptions {
+        exclude("META-INF/io.netty.versions.properties")
+    }
 }
 
 spotless {
@@ -81,8 +85,8 @@ dependencies {
     implementation 'androidx.palette:palette-ktx:1.0.0'
     implementation "dev.sasikanth:colorsheet:1.0.1"
     implementation "io.noties.markwon:core:4.6.2"
-    implementation "app.redwarp.gif:decoder:0.3.0"
-    implementation "app.redwarp.gif:android-drawable:0.3.0"
+    implementation "app.redwarp.gif:decoder:0.4.0"
+    implementation "app.redwarp.gif:android-drawable:0.4.0"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.5.1'
