feat: Add power management option (#121)
* Add a shouldPlayFlow to pause the playback

* Create settings fragment, and fix the theme (kind of)

* Setup settings with datastore

* Finish transition to DataStore

* Setup AppSettings

* Use emit instead of tryEmit

* Add default values for settings

* Update color set glitch

* Pause only for the background

* Extract AppSettings, cleanups

* Hide settings when api < 23

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     implementation "io.noties.markwon:core:4.6.2"
     implementation "app.redwarp.gif:decoder:0.5.1"
     implementation "app.redwarp.gif:android-drawable:0.5.1"
+    implementation "androidx.preference:preference-ktx:1.1.1"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.5.1'
