--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,8 @@ spotless {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
@@ -81,15 +81,15 @@ dependencies {
     implementation 'androidx.palette:palette-ktx:1.0.0'
     implementation "dev.sasikanth:colorsheet:1.0.1"
     implementation "io.noties.markwon:core:4.6.2"
-    implementation "app.redwarp.gif:decoder:0.6.0"
-    implementation "app.redwarp.gif:android-drawable:0.6.0"
+    implementation "app.redwarp.gif:decoder:0.6.1"
+    implementation "app.redwarp.gif:android-drawable:0.6.1"
     implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-rc01"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.6.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 
 def isNonStable = { String version ->
