--- a/fetch_translations/Cargo.toml
+++ b/fetch_translations/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-anyhow = "1.0.40"
-reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
-serde = { version = "1.0.125", features = ["derive"] }
+anyhow = "1.0.42"
+reqwest = { version = "0.11.4", features = ["json"] }
+tokio = { version = "1.8.1", features = ["full"] }
+serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+xml-rs = "0.8.3"
+convert_case = "0.4.0"
