chore: Bump gradle and deps, fix jetifier issue with bouncycastle

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,6 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 android.enableR8.fullMode=true
+
+# Fix for issue with AGP 4.2.2. See https://issuetracker.google.com/issues/192927712
+android.jetifier.blacklist=bcprov-jdk15on
