--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,17 +74,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation "androidx.constraintlayout:constraintlayout:2.1.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
     implementation 'androidx.lifecycle:lifecycle-service:2.3.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
     implementation "dev.sasikanth:colorsheet:1.0.1"
     implementation "io.noties.markwon:core:4.6.2"
-    implementation "app.redwarp.gif:decoder:0.6.1"
-    implementation "app.redwarp.gif:android-drawable:0.6.1"
+    implementation "app.redwarp.gif:decoder:0.7.1"
+    implementation "app.redwarp.gif:android-drawable:0.7.1"
     implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.robolectric:robolectric:4.6.1'
