--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /.idea/assetWizardSettings.xml
 /.idea/google-java-format.xml
 /.idea/misc.xml
+/.idea/deploymentTargetDropDown.xml
 .DS_Store
 /build
 /captures
