--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id "com.diffplug.spotless" version "6.2.2"
-    id "com.github.ben-manes.versions" version "0.39.0"
+    id "se.ascp.gradle.gradle-versions-filter" version "0.1.10"
 }
 
 android {
