feat: Add simplified chinese language support

--- a/fetch_translations/config.json
+++ b/fetch_translations/config.json
@@ -28,5 +28,10 @@
         "code": "it",
         "values_folder": "values-it",
         "store_listing_file": "it-IT.json"
+    },
+    {
+        "code": "zh-Hans",
+        "values_folder": "values-zh",
+        "store_listing_file": "zh-Hans.json"
     }
 ]
