--- a/update-fastlane/Cargo.toml
+++ b/update-fastlane/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "update_fastlane"
+name = "update-fastlane"
 version = "0.1.0"
 authors = ["Redwarp <redwarp@gmail.com>"]
 edition = "2021"
