--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["fetch_translations", "update_fastlane"]
+members = ["fetch-translations", "update-fastlane"]
 resolver = "2"
