--- a/fetch-translations/Cargo.toml
+++ b/fetch-translations/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fetch_translations"
+name = "fetch-translations"
 version = "0.1.0"
 authors = ["Benoit Vermont <redwarp@gmail.com>"]
 edition = "2021"
