Use a painter for drawable

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling:1.1.1'
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
 
+    implementation "com.google.accompanist:accompanist-drawablepainter:0.23.1"
+
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
     // UI Tests
