--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,7 @@ dependencies {
     // Tooling support (Previews, etc.)
     implementation 'androidx.compose.ui:ui-tooling:1.1.1'
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
+    implementation "androidx.navigation:navigation-compose:2.4.2"
 
     implementation "com.google.accompanist:accompanist-flowlayout:0.23.1"
 
