--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,20 +7,16 @@
         android:required="true" />
 
     <application
+        android:name=".GifApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".GifApplication"
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.SetupActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:exported="true" />
-        <activity
-            android:name=".ui.LauncherActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
