--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,8 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.4.2"
 
     implementation "com.google.accompanist:accompanist-flowlayout:0.23.1"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
+    implementation "com.google.accompanist:accompanist-insets:0.23.1"
 
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
