--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ spotless {
 }
 
 dependencies {
+    var compose_version = '1.1.1'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(project(':markdown'))
     implementation 'androidx.appcompat:appcompat:1.4.2'
@@ -78,7 +80,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2'
-    implementation 'androidx.lifecycle:lifecycle-service:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-service:2.5.0'
     implementation 'androidx.palette:palette-ktx:1.0.0'
     implementation "com.atlassian.commonmark:commonmark:0.17.0"
     implementation "app.redwarp.gif:decoder:1.2.0"
@@ -86,21 +88,21 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.activity:activity-compose:1.5.0'
     // Compose Material Design
-    implementation 'androidx.compose.material:material:1.1.1'
+    implementation "androidx.compose.material:material:$compose_version"
     // Animations
-    implementation 'androidx.compose.animation:animation:1.1.1'
+    implementation "androidx.compose.animation:animation:$compose_version"
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.1.1'
-    implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
-    implementation "androidx.navigation:navigation-compose:2.4.2"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.navigation:navigation-compose:2.5.0"
 
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
     implementation "com.google.accompanist:accompanist-insets:0.23.1"
 
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0'
     // UI Tests
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.1.1'
 
@@ -108,6 +110,10 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.8.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // Test rules and transitive dependencies:
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4:$compose_version")
+    // Needed for createComposeRule, but not createAndroidComposeRule:
+    debugImplementation("androidx.compose.ui:ui-test-manifest:$compose_version")
 }
 
 def isNonStable = { String version ->
