--- a/release/Cargo.toml
+++ b/release/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-git2 = "0.14"
+git2 = "0.13"
+conventional_commits_next_version_lib = "0.3"
+semver = "1.0"
