--- a/release/Cargo.toml
+++ b/release/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-git2 = "0.13"
-conventional_commits_next_version_lib = "0.3"
+git2 = "0.14"
 semver = "1.0"
 regex = "1.6"
+git-conventional = "0.11"
+# git-cliff = { version = "0.8", default-features = false }
