--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["fetch-translations", "update-fastlane", "release"]
+members = ["fetch-translations", "update-fastlane", "release-process"]
 resolver = "2"
