--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,10 +2,9 @@ name: Deploy Website
 on:
   push:
     branches:
-      - 'main'
+      - "main"
     paths:
-      - 'website/**'
-      - 'docs/privacy.md'
+      - "website/**"
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
@@ -16,7 +15,7 @@ permissions:
 
 # Allow one concurrent deployment
 concurrency:
-  group: 'pages'
+  group: "pages"
   cancel-in-progress: true
 
 jobs:
@@ -27,9 +26,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Copy privacy policy
-        run: ./website/scripts/copy_privacy_policy.sh
-        shell: bash
       - name: Build
         uses: shalzz/zola-deploy-action@v0.16.1
         env:
