--- a/website/themes/juice/config.toml
+++ b/website/themes/juice/config.toml
@@ -1,21 +1,25 @@
 # The URL the site will be built for
-base_url = "https://redwarp.github.io/gif-wallpaper"
+base_url = "/"
+
+title = "Juice - An intuitive, elegant, and lightweight Zola theme for product sites."
+
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
+
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
-theme = "juice"
-taxonomies = [{ name = "categories" }, { name = "tags" }]
-title = "GIF Live Wallpaper"
 
+# Configuration of the Markdown rendering
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
+highlight_theme = "inspired-github"
 
 [extra]
-# Put all your custom variables here
-author = "redwarp"
-juice_logo_name = "GIF Live Wallpaper"
-juice_logo_path = "icon.svg"
-repository_url = "https://github.com/redwarp/gif-wallpaper"
+juice_logo_name = "Juice"
+juice_logo_path = "juice.svg"
+juice_extra_menu = [
+    { title = "Github", link = "https://github.com/huhu/juice" }
+]
+repository_url = "https://github.com/huhu/juice"
