--- a/website/config.toml
+++ b/website/config.toml
@@ -5,7 +5,7 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 theme = "anpu"
-taxonomies = [{ name = "categories" }, { name = "tags" }]
+taxonomies = []
 title = "GIF Live Wallpaper"
 
 [markdown]
@@ -16,8 +16,6 @@ highlight_code = true
 [extra]
 # Put all your custom variables here
 author = "redwarp"
-anpu_date_format = "%e %B %Y"
-anpu_menu_links = [
-    { url = "$BASE_URL/privacy/", name = "Privacy Policy" },
-    { url = "https://github.com/redwarp/gif-wallpaper", name = "GitHub" }
+menu_links = [
+    { url = "https://github.com/redwarp/gif-wallpaper", title = "GitHub" }
 ]
