chore(website): Ignore websites chores in changelog

--- a/release-process/main-cliff.toml
+++ b/release-process/main-cliff.toml
@@ -36,6 +36,7 @@ commit_preprocessors = [
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
+    { message = "\\(website\\):", skip = true },
     { message = "^feat", group = "Features" },
     { message = "^fix", group = "Bug Fixes" },
     { message = "^doc", group = "Documentation" },
