--- a/.github/workflows/release-to-playstore.yml
+++ b/.github/workflows/release-to-playstore.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
       - name: Build release bundle
         run: ./gradlew bundleRelease
       - name: Sign bundle
