chore(app): Update kotlin to 1.8.0

--- a/markdown/build.gradle
+++ b/markdown/build.gradle
@@ -35,8 +35,9 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.0'
     }
+    namespace 'app.redwarp.markdown'
 }
 
 spotless {
