--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         versionName "2.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resConfigs 'en', 'fr', 'ru', 'de', 'es', 'it', 'zh', 'eu', 'tr'
 
-        resConfigs "en", "fr", "ru", "de", "es", "it", "zh", "eu", "tr"
     }
 
     buildFeatures {
@@ -57,8 +57,9 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.0'
     }
+    namespace 'net.redwarp.gifwallpaper'
 }
 
 spotless {
