--- a/markdown/src/main/AndroidManifest.xml
+++ b/markdown/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="app.redwarp.markdown">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
 </manifest>
